<resources>
    <string name="app_name">Jejama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="lokasi">Lokasi</string>
    <string name="artikel">Artikel</string>
    <string name="login">Login</string>
    <string name="login_dengan_google">Login dengan Google</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="provinsi">Provinsi</string>
    <string name="no_hp">No.HP</string>
    <string name="kabupaten_kota">Kabupaten/Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="kebijakan">Saya menyetujui data yang saya masukkan dalam aplikasi ini sesuai dengan identitas dan data akan aman dengan mematuhi segala kebijakan privasi dari aplikasi ini</string>
    <string name="bandar_lampung_lampung">Bandar Lampung, Lampung</string>
    <string name="info_result">Kamu terbebas dari talasemia</string>
    <string name="detail">Detail</string>
    <string name="info">Setelah mengisi kuesioner, kamu tidak mengalami gejala apapun terkait talasemia. Tetap lindungi diri dan cek kesehatan secara berkala</string>
    <string name="title_konsul">Konsultasi dengan ahlinya</string>
    <string name="cari">Cari</string>
    <string name="dokter_spesialis">Spesialis</string>
    <string name="penyitas">Forum Penyitas</string>
    <string name="relawan">Relawan</string>
    <string name="dr_ichwan_sholihin_m_kes">Dr. Ichwan Sholihin, M.Kes.</string>
    <string name="spesialis_jantung_dan_kanker">Spesialis jantung dan kanker</string>
    <string name="dr_abdul_ghoffur">Dr. Abdul Ghoffur</string>
    <string name="spesialis_paru_paru">Spesialis Paru-paru</string>
    <string name="diana_yulainti_m_psi">Diana Yulainti, M.Psi</string>
    <string name="psikolog">Psikolog</string>
    <string name="bery_andriawan">Bery Andriawan</string>
    <string name="penyitas_talasemia_sejak_2018">Penyitas Talasemia sejak 2018</string>
    <string name="zaid_saputra">Zaid Saputra</string>
    <string name="pengidap_talasemia_mayor">Pengidap Talasemia Mayor</string>
    <string name="tirta_adi_bayu">Tirta Adi Bayu</string>
    <string name="pengidap_talasemia_minor">Pengidap Talasemia Minor</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="aktif_2_jam_yang_lalu">aktif 2 jam yang lalu</string>
    <string name="kirim_pesan">Kirim pesan</string>
    <string name="title_chat">Cari tempat untuk perawatan</string>
    <string name="_12_jam_yang_lalu">12 jam yang lalu</string>
    <string name="post">Halo semuanya,\ndisini ada yang tau tempat transfusi darah sekitar natar?</string>
    <string name="_10_komentar">10 komentar</string>
    <string name="cari_tau_tentang_talasemia">Cari tau tentang talasemia</string>
    <string name="blog">Blog</string>
    <string name="video">Video</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>
    <string name="title_artikel">Pentingnya Transfusi Darah dan Pemberian Kelator Besi untuk Menjaga Kualitas Hidup Anak Usia Sekolah</string>
    <string name="_1_hari_yang_lalu">1 hari yang lalu</string>
    <string name="post2">Teman-teman kita ada pembukaan untuk tempat terapi psikologis khusus untuk anak2 penderita thalasemia nih, yg mau ikutan boleh bngt WA aku ya atau kunjungi link ini: bit.ly/RumahRamahThalasemia</string>
    <string name="_12_komentar">12 komentar</string>
    <string name="title_artikel2">Perbedaan Thalasemia Minor dan Manyor serta Cara Pencegahannya</string>
    <string name="title_home">Apa yang harus saya lakukan?</string>
    <string name="solution1">Tranfusi darah setiap 2 minggu sekali</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="lanjut">Lanjut</string>
    <string name="kembali">Kembali</string>
    <string name="forum">Forum</string>
    <string name="donor_darah_sukarela_dds">Donor Darah Sukarela (DDS)</string>
    <string name="donor_darah_gratis_dan_pelatihan">Donor darah gratis dan pelatihan</string>
    <string name="_14">14</string>
    <string name="bandarlampung_lampung">Bandarlampung, Lampung</string>
    <string name="palang_merah_indonesia_pmi_lampung_selatan">Palang Merah Indonesia (PMI) Lampung Selatan</string>
    <string name="kalianda_lampung_selatan">Kalianda, Lampung Selatan</string>
    <string name="atur_alarm">Atur Alarm</string>
</resources>