<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/bg_square_white">

        <ImageView
            android:id="@+id/img"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_person" />

        <TextView
            android:id="@+id/usernamepost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/dr_ichwan_sholihin_m_kes"
            android:textColor="@color/text"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/timepost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernamepost"
            android:layout_toEndOf="@id/img"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_1_hari_yang_lalu"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/imgpost"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/img"
            android:layout_margin="8dp"
            android:src="@drawable/talasemia"/>

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgpost"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/post"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/_14"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_like" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:layout_below="@id/post"
            android:layout_toEndOf="@id/likes"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/_10_komentar"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_chat" />
    </RelativeLayout>

</LinearLayout>