<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/kuesioner_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".kuesioner.KuesionerActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#F5F5F5"
        android:layout_margin="24dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_medium"
                android:layout_margin="12dp"
                android:textAlignment="center"
                android:textColor="@color/text"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/choices"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/question">

                <RadioButton
                    android:id="@+id/btnNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="18sp"
                    android:layout_marginEnd="48dp"/>

                <RadioButton
                    android:id="@+id/btnYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ya"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="18sp"
                    android:layout_marginStart="48dp"/>

            </RadioGroup>
            <TextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lanjut"
                android:textSize="16sp"
                android:layout_below="@id/choices"
                android:layout_alignParentEnd="true"
                app:drawableEndCompat="@drawable/ic_next"
                android:layout_margin="8dp"
                android:fontFamily="@font/montserrat_medium"/>

            <TextView
                android:id="@+id/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kembali"
                android:textSize="16sp"
                android:layout_below="@id/choices"
                android:layout_margin="8dp"
                android:fontFamily="@font/montserrat_medium"
                app:drawableStartCompat="@drawable/ic_prev" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>