<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:padding="12dp"
    android:scrollIndicators="none"
    tools:context=".verify.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/bullets" />

        <TextView
            android:id="@+id/txdaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/daftar"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="6dp"
            android:layout_below="@id/txdaftar"
            app:cardCornerRadius="12dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/nama_lengkap"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:layout_below="@id/cvname">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:padding="5dp"
                    android:src="@drawable/flag"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:layout_marginStart="12dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/no_hp"
                    android:inputType="phone"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/prov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_below="@id/phone">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/provinsi"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/kab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_below="@id/prov">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/kabupaten_kota"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/kec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_below="@id/kab">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/kecamatan"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_below="@id/kec">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/email"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_below="@id/email">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/username"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_below="@id/username">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </androidx.cardview.widget.CardView>

        <CheckBox
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/kebijakan"
            android:textSize="12sp"
            android:textColor="@color/text"
            android:fontFamily="@font/montserrat_medium"
            android:layout_below="@id/pass"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            android:backgroundTint="@color/secondary"
            app:cardElevation="6dp"
            android:layout_below="@id/agree">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="12dp"
                android:layout_gravity="center_horizontal"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>