<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical"
    android:padding="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".konsultasi.KonsulFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_konsul"
            android:textSize="18sp"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/text"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <EditText
                android:id="@+id/edt_search_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:drawableStart="@drawable/ic_search"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/cari"/>

        </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/spesialis"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dokter_spesialis"
                    android:textColor="@color/text"
                    android:gravity="center"
                    android:background="@drawable/bg_square_tab"
                    android:padding="8dp"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/montserrat_medium"/>

                <TextView
                    android:id="@+id/relawan"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/relawan"
                    android:gravity="center"
                    android:textColor="@color/text"
                    android:padding="8dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_square_tab"
                    android:fontFamily="@font/montserrat_medium"/>

            </LinearLayout>

        <FrameLayout
            android:id="@+id/konsul_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>