<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:padding="12dp"
    tools:context=".konsultasi.ChatActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_person" />
    
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dr_ichwan_sholihin_m_kes"
        android:textColor="@color/text"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="18sp"
        android:layout_toEndOf="@id/img"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_toEndOf="@id/img"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/aktif_2_jam_yang_lalu"
        android:textSize="13sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_below="@id/img"
        android:layout_marginTop="5dp"
        android:background="@color/secondary" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_send"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_toStartOf="@id/img2"
        android:layout_marginEnd="8dp"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/kirim_pesan"/>

    </androidx.cardview.widget.CardView>
</RelativeLayout>