<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F5F5"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".artikel.ArtikelFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cari_tau_tentang_talasemia"
        android:textSize="18sp"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/text"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <EditText
            android:id="@+id/edt_search_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:drawableStart="@drawable/ic_search"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/cari"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/thalasemia2"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@id/img"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/title_artikel"
                android:textColor="@color/text" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/talasemia"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@id/img2"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/title_artikel2"
                android:textColor="@color/text" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>